[project]
name = "nldate"
version = "0.1.0"
description = "Natural language date parser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nldate"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
